# rmi

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
lib/: CMakeLists.txt  fetch-gtest-lib.cmake.in
lib/ho/: logger.hxx
lib/klay/: colorize.h  testbench.cpp  testbench.h
src/: archive.hxx  function.hxx  functor.hxx  index-sequence.hxx
src/application/: client.cpp  client.hxx  server.cpp  server.hxx
src/audit/: colorize.hxx  console.cpp  console.hxx  logger.cpp  logger.hxx
src/common/: colorize.hxx
src/common/audit/: console.cpp  console.hxx  logger.cpp  logger.hxx
src/event/: eventfd.cpp  eventfd.hxx  mainloop.cpp  mainloop.hxx
src/klass/: function.hxx  functor.hxx
src/protocol/: archive.hxx  function.hxx  functor.hxx  index-sequence.hxx
src/stream/: archive.cpp  archive.hxx  index-sequence.hxx
src/transport/: connection.cpp  connection.hxx  message.cpp  message.hxx  socket.cpp  socket.hxx
test/: CMakeLists.txt  test-archive.cpp  test-functor.cpp  test-main.cpp
test/application/: test-server-client.cpp  test-server.cpp
test/audit/: test-console.cpp
test/common/: test-console.cpp
test/ho/: test-logger.cpp
test/klass/: test-functor.cpp
test/protocol/: test-archive.cpp  test-functor.cpp
test/stream/: test-archive.cpp
test/transport/: test-connection.cpp  test-socket.cpp
